style to support multi images carousel

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <div
       id="carouselExampleControls"
       class="carousel slide"
-      data-bs-ride="carousel"
     >
-      <div id="carouselInner" class="carousel-inner"></div>
+    <!-- data-bs-ride="carousel" -->
+    <div id="carouselInner" class="carousel-inner"></div>
       <button
         class="carousel-control-prev"
         type="button"
