--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
     </div>
 
     <!-- Carousel -->
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-    >
-    <!-- data-bs-ride="carousel" -->
-    <div id="carouselInner" class="carousel-inner"></div>
+    <div id="carouselExampleControls" class="carousel slide">
+      <!-- data-bs-ride="carousel" -->
+      <div id="carouselInner" class="carousel-inner"></div>
       <button
         class="carousel-control-prev"
         type="button"
@@ -80,11 +77,7 @@
     </div>
 
     <!-- Information Section -->
-    <div
-      id="infoDump"
-      class="px-5 py-3 mx-auto"
-      style="max-width: 1600px"
-    ></div>
+    <div id="infoDump" class="py-1 mx-auto"></div>
 
     <!-- Carousel Item Template -->
     <template id="carouselItemTemplate">
@@ -113,5 +106,16 @@
       </div>
     </template>
     <!-- Carousel Item Template -->
-  </body>
+      <!-- Information Section Template -->
+      <template id="infoDumpTemplate">
+        <div>
+          <h1></h1>
+          <div class="section">
+            <h2>Description</h2>
+            <p></p>
+          </div>
+        </div>
+      </template>
+      <!-- Information Section Template -->
+    </body>
 </html>
