add attributes section

--- a/index.html
+++ b/index.html
@@ -106,16 +106,20 @@
       </div>
     </template>
     <!-- Carousel Item Template -->
-      <!-- Information Section Template -->
-      <template id="infoDumpTemplate">
-        <div>
-          <h1></h1>
-          <div class="section">
-            <h2>Description</h2>
-            <p></p>
-          </div>
+    <!-- Information Section Template -->
+    <template id="infoDumpTemplate">
+      <div>
+        <h1></h1>
+        <div class="section">
+          <h2>Description</h2>
+          <p></p>
         </div>
-      </template>
-      <!-- Information Section Template -->
-    </body>
+        <div class="section">
+          <h2>Attributes</h2>
+          <div class="attributes"></div>
+        </div>
+      </div>
+    </template>
+    <!-- Information Section Template -->
+  </body>
 </html>
