--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
           <h2>Attributes</h2>
           <div class="attributes"></div>
         </div>
+        <div class="section">
+          <h2>Additional Information</h2>
+          <p></p>
+        </div>
       </div>
     </template>
     <!-- Information Section Template -->
